# Pore-C-Snakemake

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  Snakefile  basecalls.tsv  config.yaml  environment.yml  file_layout.yaml  pyproject.toml  tox.ini
.test/: basecalls.tsv  file_layout.yaml  scratch
.test/resources/: .gitattributes  GM12878.conf.bed  GM12878.phased.conf.vcf.gz.tbi  GM12878.vcf.gz.tbi  GM12878_NlaIII.sequencing_summary.txt  read_ids.txt
.test/resources/GM12878_NlaIII_fast5/: NlaIII_GM12878.fast5  filename_mapping.txt
config/: basecalls.tsv  config.yaml  file_layout.yaml  phased_vcfs.tsv  references.tsv
envs/: bwa.yml  cooler.yml  pairtools.yml  pore_c.yml  pore_c_dev.yml  pore_c_rel.yml  porec.yml  whatshap.yml
rules/: common.smk  exports.smk  mapping.smk  matrices.smk  methylation.smk  pairs.smk  phase.smk  reads.smk  refgenome.smk
schemas/: basecall.schema.yaml  config.schema.yaml
scratch/: add_idx_to_read_name.py  remove_idx_from_read_name.py
scripts/: filter_bam.py  reformat_bam.py
workflow/: Snakefile
workflow/envs/: bcftools.yml  bwa.yml  juicer_tools.yml  pairix.yml  pore_c.yml  python_script_utils.yml  whatshap.yml
workflow/rules/: common.smk  exports.smk  mapping.smk  methylation.smk  reads.smk  refgenome.smk  variants.smk
workflow/schemas/: config.schema.yaml
wrappers/whatshap/haplotag/: environment.yaml  wrapper.py
