[tool.poetry]
name = "pore-c-snakemake"
version = "0.3.0-rc.1"
description = "A snakemake pipeline to run the pore-c tool suite"
authors = ["Eoghan Harrington <eoghan.harrington@nanoporetech.com>"]

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"
snakemake = "^5.19.3"
python-box = "^4.2.3"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
snakefmt = "==0.*,>=0.1.3"
black = "==19.*,>=19.10.0.b0"
pre-commit = "==2.*,>=2.6.0"
dephell = "*"


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "conda", path = "environment.yml" }
versioning = "zerover"

[tool.snakefmt]
line-length = 120
include = '\.smk$|^Snakefile|\.py$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
