[tool.poetry]
name = "pore-c-snakemake"
version = "0.2.0"
description = "A snakemake pipeline to run the pore-c tool suite"
authors = ["Eoghan Harrington <eoghan.harrington@nanoporetech.com>"]

[tool.snakefmt]
line-length = 120
include = '\.smk$|^Snakefile|\.py$'

[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'
