[tool.poetry]
name = "pore-c-snakemake"
version = "0.2.0"
description = "A snakemake pipeline to run the pore-c tool suite"
authors = ["Eoghan Harrington <eoghan.harrington@nanoporetech.com>"]

[tool.snakefmt]
line-length = 120
include = '\.smk$|^Snakefile|\.py$'


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
version_files = [
 "pyproject.toml",
]
update_changelog_on_bump = true
changelog_start_rev = "0.2.0"

[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'
